--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.11.0",
     "nodemailer": "^6.9.14"
   }
 }
