--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -3,6 +3,7 @@
     "argon2": "^0.41.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "mongodb": "^4.13.0",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15"
   }
