--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -5,6 +5,7 @@
     "express": "^4.19.2",
     "mongodb": "^4.13.0",
     "mysql2": "^3.11.0",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "pug": "^3.0.3"
   }
 }
