--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^4.13.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15",
     "pug": "^3.0.3"
